syntax = "proto3";
import "google/protobuf/empty.proto";

option go_package = "github.com/laozhubaba/api_proj/servers/grpc/proto";

service Api {
    rpc GetUsers(google.protobuf.Empty) returns (GetUsersResponse);
    rpc GetUsersStream(google.protobuf.Empty) returns (stream GetUserResponse);
    rpc GetUser(UserId) returns (GetUserResponse);
    rpc AddUser(GetUserResponse) returns (google.protobuf.Empty);
}

message UserId {
    int64 message = 1;
}

message GetUserResponse {
    string name = 1;
    string address = 2;
}

message GetUsersResponse {
    repeated GetUserResponse users = 1;
}